src/dts/tests/interface_var/interface_var.exp
Error: interface_var.js:2
  2: var agelimit: number = adult;
                            ^^^^^ class type: adult. This type is incompatible with
  2: var agelimit: number = adult;
                   ^^^^^^ number


Found 1 error
